Update GitHub Actions Workflow for Contracts CI
- Modified the working directory for contract-related steps to streamline the build and test processes.
- Ensured all relevant commands navigate to the correct directory for the escrow contracts, enhancing the workflow's reliability and clarity.

--- a/.github/workflows/contracts-ci.yml
+++ b/.github/workflows/contracts-ci.yml
@@ -22,7 +22,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: contracts/bounty_escrow/contracts/escrow
+        working-directory: contracts/bounty_escrow
 
     steps:
       - name: Checkout code
@@ -60,21 +60,25 @@ jobs:
       - name: Check code formatting
         run: |
           source $HOME/.cargo/env
+          cd contracts/escrow
           cargo fmt --check --all
 
       - name: Build contracts
         run: |
           source $HOME/.cargo/env
+          cd contracts/escrow
           cargo build --release --target wasm32v1-none
 
       - name: Run tests
         run: |
           source $HOME/.cargo/env
+          cd contracts/escrow
           cargo test --verbose --lib
 
       - name: Build Soroban contract
         run: |
           source $HOME/.cargo/env
+          cd contracts/escrow
           stellar contract build --verbose
 
       - name: Stellar build check
